# TurnOver

./: .gitignore  README.md  components.json  package-lock.json  package.json  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/(pages)/: layout.tsx
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  graveyard.py  recommendations.py  rotation.py  shoes.py  users.py
backend/app/core/: auth.py  config.py  supabase.py
backend/app/models/: __init__.py  recommendation.py  shoe.py  user.py
backend/app/schemas/: __init__.py  common.py  shoe.py  user.py
backend/app/scripts/: __init__.py  fetch_shoe_images.py  seed_database.py
backend/supabase/: seed.sql
backend/supabase/migrations/: 001_initial_schema.sql  002_allow_duplicate_graveyard_shoes.sql
backend/tests/: conftest.py
components/: index.ts  navigation.tsx  recommendation-card.tsx  shoe-card.tsx  tag-pill.tsx
components/auth/: protected-route.tsx
components/layout/: navigation.tsx
components/shared/: rating-stars.tsx
components/ui/: dropdown-menu.tsx
docs/: api-contract.md  frontend-assumptions.md  prd.md  recommendation-logic.md  supabase-schema.md  system-overview.md
hooks/: index.ts  use-graveyard.ts  use-recommendations.ts  use-rotation.ts  use-shoes.ts  use-user-profile.ts
lib/: types.ts
lib/api/: cache.ts  client.ts
lib/auth/: context.tsx  index.ts
lib/types/: index.ts
turnover/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
turnover/components/: Button.tsx  Navigation.tsx  (+1 more)
(+32 files in other folders)
